updated url for mailing list and network detector to feedback.i2p.net

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -27,7 +27,7 @@
     {{ end }}
 
     <!-- Mailing List Widget Styles -->
-    <link rel="stylesheet" href="https://feedback.stormycloud.org/widgets/styles.css">
+    <link rel="stylesheet" href="https://feedback.i2p.net/widgets/styles.css">
 
     <!-- Theme Script (prevent flash) -->
     <script>
@@ -70,14 +70,14 @@
     {{ end }}
 
     <!-- Mailing List Widget Script -->
-    <script src="https://feedback.stormycloud.org/widgets/mailing-list.js"></script>
+    <script src="https://feedback.i2p.net/widgets/mailing-list.js"></script>
 
     <!-- Feature Request Widget Script -->
-    <script src="https://feedback.stormycloud.org/widgets/features.js"></script>
+    <script src="https://feedback.i2p.net/widgets/features.js"></script>
 
     <!-- Poll Widget Script -->
     {{ if .Site.Params.poll.enabled }}
-    <script src="https://feedback.stormycloud.org/widgets/voting.js"></script>
+    <script src="https://feedback.i2p.net/widgets/voting.js"></script>
     {{ end }}
 
     {{ block "scripts" . }}{{ end }}
