--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -681,6 +681,6 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 
 <!-- Feedback Form Handler -->
-<script src="https://feedback.stormycloud.org/widgets/docs-feedback.js"></script>
+<script src="https://feedback.i2p.net/widgets/docs-feedback.js"></script>
 
 {{ end }}
