--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -34,7 +34,7 @@
                     <div class="footer-newsletter-inline">
                         <p class="newsletter-description">{{ i18n "footer.newsletterDescription" }}</p>
                         <div id="mailing-list-widget"
-                             data-api-url="https://feedback.stormycloud.org"
+                             data-api-url="https://feedback.i2p.net"
                              data-button-text="{{ i18n "footer.subscribe" }}"
                              data-placeholder="{{ i18n "footer.emailPlaceholder" }}">
                         </div>
