--- a/layouts/partials/poll-modal.html
+++ b/layouts/partials/poll-modal.html
@@ -14,7 +14,7 @@
             <!-- Poll Widget (exactly like feedback widget pattern) -->
             <div id="poll-widget"
                  data-poll-id="{{ .Site.Params.poll.pollId | default "1" }}"
-                 data-api-url="https://feedback.stormycloud.org"
+                 data-api-url="https://feedback.i2p.net"
                  data-show-results="true">
             </div>
         </div>
@@ -31,7 +31,7 @@
 <script>
 (function() {
     const hostname = window.location.hostname;
-    let apiUrl = 'https://feedback.stormycloud.org';
+    let apiUrl = 'https://feedback.i2p.net';
 
     // Detect I2P
     if (hostname.endsWith('.i2p')) {
