WIP: fixing poll

--- a/layouts/partials/poll-modal.html
+++ b/layouts/partials/poll-modal.html
@@ -15,7 +15,7 @@
             <div id="poll-widget"
                  data-poll-id="{{ .Site.Params.poll.pollId | default "1" }}"
                  data-api-url="https://feedback.i2p.net"
-                 data-show-results="true">
+                 data-show-results="false">
             </div>
         </div>
 
