--- a/layouts/donate/download.html
+++ b/layouts/donate/download.html
@@ -169,7 +169,7 @@
         <div class="thank-you-header">
             <picture>
                 <source srcset="{{ relURL "images/thankyou-mascot_dark.png" }}" media="(prefers-color-scheme: dark)">
-                <img src="{{ relURL "images/thankyou-mascot_light.png" }}" alt="Thank you from the I2P Team" height="150">
+                <img src="{{ relURL "images/thankyou-mascot_light.png" }}" alt="Thank you from the I2P Team" height="150" loading="lazy" decoding="async">
             </picture>
             <h1>{{ .Title }}</h1>
         </div>
